fix(scrollbar) : adds support for horizontal scroll

--- a/src/app/theming/_customMixins.scss
+++ b/src/app/theming/_customMixins.scss
@@ -4,6 +4,7 @@
         scrollbar-color: auto ;
         &::-webkit-scrollbar {
             width: 0.75rem;
+            height: 0.5rem;
         }
 
         &::-webkit-scrollbar-track {
